--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -9,6 +9,10 @@ documents those changes that are of interest to users and admins.
  -- Add new error code, ESLURM_BATCH_ONLY for attepts to launch 
     job steps on front-end system (e.g. Blue Gene).
  -- Updates to html documents.
+ -- Assorted fixes in smap, partition creation mode.
+ -- Add proper support for "srun -n" option on BGL recognizing 
+    processor count in both virual and coprocessor modes.
+ -- Make default node_use on Blue Gene be coprocessor, as documented.
 
 * Changes in SLURM 0.4.0-pre9
 =============================
