--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,8 +1,8 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
-* Changes in SLURM 0.4.0 (production release)
-=============================================
+* Changes in SLURM 0.4.0-pre10
+==============================
  -- Specify number of I/O nodes associated with BlueGene partition.
  -- Do not launch a job's tasks if the job is cancelled while its
     prolog is running (which can be slow on BlueGene).
