--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,11 +1,12 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
-* Changes in SLURM 0.4.0
-========================
+* Changes in SLURM 0.4.0-pre11
+==============================
  -- Add new srun option "--test-only" for testing slurm_job_will_run API.
  -- Fix bugs in slurm_job_will_run() processing.
  -- Change slurm_job_will_run() to not return a message, just an error code.
+ -- Sync partition owners with running jobs on slurmctld restart.
 
 * Changes in SLURM 0.4.0-pre10
 ==============================
