Start header for slurm 0.4.1

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,6 +1,9 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.4.1 (under development)
+========================
+
 * Changes in SLURM 0.4.0
 ========================
  -- Minor tweak to init.d/slurm for BlueGene systems.
