--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -3,6 +3,8 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 0.4.1 (under development)
 ========================
+ -- BlueGene plugin kills jobs running in defunct bglblock on restart.
+ -- Smap displays pending jobs now, in addition to running and completing jobs.
 
 * Changes in SLURM 0.4.0
 ========================
