Correct option code for --disable-status, should be -X rather than (duplicate) -q.

--- a/branches/slurm-0-3-branch/doc/man/man1/srun.1
+++ b/branches/slurm-0-3-branch/doc/man/man1/srun.1
@@ -235,7 +235,7 @@ disables the status feature normally available when \fBsrun\fR receives
 a single Ctrl-C and causes \fBsrun\fR to instead immediately terminate the
 running job. 
 .TP
-\fB\-q\fR, \fB\-\-disable-status\fR
+\fB\-X\fR, \fB\-\-disable-status\fR
 Disable the display of task status when srun receives a single SIGINT
 (Ctrl-C). Instead immediately forward the SIGINT to the running job.
 A second Ctrl-C in one second will forcibly terminate the job and
