Correct incorrect letter code for SLURM_DISABLE_STATUS

--- a/branches/slurm-0-3-branch/doc/man/man1/srun.1
+++ b/branches/slurm-0-3-branch/doc/man/man1/srun.1
@@ -615,7 +615,7 @@ SLURM_WAIT
 \fB\-W, \-\-wait\fR=\fIseconds\fR
 .TP
 SLURM_DISABLE_STATUS
-\fB\-W, \-\-disable-status\fR
+\fB\-X, \-\-disable-status\fR
 .PP
 Additionally,
 .B srun
