Install patches from slurm v0.3.11 (through 2/7/2005).

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -5,6 +5,13 @@ documents those changes that are of interest to users and admins.
 ========================
  -- BlueGene plugin kills jobs running in defunct bglblock on restart.
  -- Smap displays pending jobs now, in addition to running and completing jobs.
+ -- Remove node use from bluegene.conf file, create both coprocessor and 
+    virtual bglblocks for now (later create just one and use API to change 
+    it when such an API is available).
+ -- Add "ChangeNumpsets" parameter to bluegene.conf to use script to 
+    update the numpsets parameter for newly created bglblocks (to be 
+    removed once the API functions).
+ -- Add all patches from slurm v0.3.11 (through 2/7/2005).
 
 * Changes in SLURM 0.4.0
 ========================
