--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,6 +1,10 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.4.2
+========================
+ -- Fix memory leak in BlueGene plugin.
+
 * Changes in SLURM 0.4.1
 ========================
  -- BlueGene plugin kills jobs running in defunct bglblock on restart.
