--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -4,6 +4,7 @@ documents those changes that are of interest to users and admins.
 * Changes in SLURM 0.4.2
 ========================
  -- Fix memory leak in BlueGene plugin.
+ -- Srun's --test-only option takes precedence over --batch option.
 
 * Changes in SLURM 0.4.1
 ========================
