--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,6 +1,10 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.4.3
+========================
+ -- Turn off some RPM build checks (bug in RPM, see slurm.spec.in)
+
 * Changes in SLURM 0.4.2
 ========================
  -- Fix memory leak in BlueGene plugin.
