--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,6 +1,11 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.4.4
+========================
+ -- Fix race condition in slurmd seting pgid of spawned tasks for 
+    process tracking.
+
 * Changes in SLURM 0.4.3
 ========================
  -- Turn off some RPM build checks (bug in RPM, see slurm.spec.in)
