--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -6,6 +6,7 @@ documents those changes that are of interest to users and admins.
  -- Change sinfo default time limit field to have 10 bytes (up from 9).
  -- Fix bug in bluegene partition selection (sorting bug).
  -- Don't display any completed jobs in smap.
+ -- Add NodeCnt to filetxt job completion plugin.
 
 * Changes in SLURM 0.4.4
 ========================
