--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -8,6 +8,7 @@ documents those changes that are of interest to users and admins.
  -- Don't display any completed jobs in smap.
  -- Add NodeCnt to filetxt job completion plugin.
  -- Minor restructuring of how MMCS is polled for DOWN nodes and switches.
+ -- Fix squeue output format for "%s" (node select data).
 
 * Changes in SLURM 0.4.4
 ========================
