--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -9,6 +9,8 @@ documents those changes that are of interest to users and admins.
  -- Add NodeCnt to filetxt job completion plugin.
  -- Minor restructuring of how MMCS is polled for DOWN nodes and switches.
  -- Fix squeue output format for "%s" (node select data).
+ -- Queue job requesting more resources than exist in a partition if 
+    that partition's state is DOWN (rather than just abort it).
 
 * Changes in SLURM 0.4.4
 ========================
