--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -12,7 +12,7 @@ documents those changes that are of interest to users and admins.
  -- Queue job requesting more resources than exist in a partition if 
     that partition's state is DOWN (rather than just abort it).
  -- Add prolog/epilog for bluegene to code base (moved from mpirun in CVS)
- -- Add prolog, epilog and bluegene.conf.example to bluegene RMP
+ -- Add prolog, epilog and bluegene.conf.example to bluegene RPM
 
 * Changes in SLURM 0.4.4
 ========================
