--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,6 +1,11 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.4.6
+========================
+-- In smap, Admin can get the Rack/midplane id from an XYZ input and vice versa.  
+   
+
 * Changes in SLURM 0.4.5
 ========================
  -- Change sinfo default time limit field to have 10 bytes (up from 9).
