Admin can down a node from configure now.

--- a/trunk/doc/man/man1/smap.1
+++ b/trunk/doc/man/man1/smap.1
@@ -259,6 +259,11 @@ By default, one copy is made.
 Delete the specified block or (default) the last partition created. 
 
 .TP
+.I \fBdown <node_range>\fR
+Down a specific node or range of nodes. 
+i.e. 000, 000-111 [000x111]
+
+.TP
 .I \fBsave <file_name>\fR
 Save the current configuration to a file. 
 If no file_name is specified, the configuration is written to a 
