--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,6 +1,10 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.4.7
+========================
+ -- Remove some BGL specific headers that IBM now distributes.
+
 * Changes in SLURM 0.4.6
 ========================
  -- smap now works on non-BGL systems.
