--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -186,7 +186,7 @@ The default value is "/usr/local/lib/slurm".
 Identifies the plugin to be used for process tracking. 
 The slurmd daemon uses this mechanism to identify all processes 
 which are children of processes it spawns for a user job. 
-Acceptable vlues at present include "proctrack/kern_ext" (which 
+Acceptable values at present include "proctrack/aix" (which 
 is the default for AIX systems) and "proctrack/sid" (which 
 is the default for all other systems).
 The slurmd daemon must be restarted for a change in ProctrackType 
