--- a/branches/slurm-0-3-branch/NEWS
+++ b/branches/slurm-0-3-branch/NEWS
@@ -1,6 +1,15 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.3.11
+=========================
+ -- Fixes for reported problems:
+   - slurm/538: user tasks block writing to stdio.
+ -- New srun option -X, --disable-status to disable Ctrl-C status feature.
+    (i.e. srun immediately forwards SIGINT to remote processes)
+ -- Fix for occaisional slurmd error "Unable to put task .. into pgrp .."
+ -- (qsnet) Fix for running slurmd on node without and elan3 adapter.
+
 * Changes in SLURM 0.3.10
 =========================
  -- Move startup script from "/etc/rc.d/init.d/slurm" to "/etc/init.d/slurm"
