partition allocator change for external wires. bgl_switch_connections checks to make sure switches are correct for each bp.

--- a/branches/slurm-0-4-branch/NEWS
+++ b/branches/slurm-0-4-branch/NEWS
@@ -1,6 +1,11 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.4.10
+========================
+ -- redesign for BGL external wiring.
+ -- smap display bug fix for smaller systems.
+
 * Changes in SLURM 0.4.9
 ========================
  -- setpnum works now, have to include this in bluegene.conf
