Note contents of applied patches.

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -3,6 +3,8 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 0.5.0-pre1
 =============================
+-- Fixes for reported problems:
+  - slurm/538: user tasks block writing to stdio
  -- Add network option to srun and job creation API for specification 
     of communication protocol over IBM Federation switch.
  -- Add new slurm.conf parameter ProctrackType (process tracking) and 
@@ -75,7 +77,13 @@ documents those changes that are of interest to users and admins.
  -- Add "ChangeNumpsets" parameter to bluegene.conf to use script to 
     update the numpsets parameter for newly created bglblocks (to be 
     removed once the API functions).
- -- Add all patches from slurm v0.3.11 (through 2/7/2005).
+ -- Add all patches from slurm v0.3.11 (through 2/7/2005)
+   - Added srun option --disable-status,-X to disable srun status feature
+     and instead forward SIGINT immediately to job upon receipt of Ctrl-C.
+   - Fix for bogus slurmd error message "Unable to put task N into pgrp..."
+   - Fix case where slurmd may erroneously detect shared memory entry
+     as "stale" and delete entry for unkillable or slow-to-exit job.
+   - (qsnet) Fix for running slurmd on node without and elan3 adapter.
 
 * Changes in SLURM 0.4.0
 ========================
