--- a/branches/slurm-0-4-branch/NEWS
+++ b/branches/slurm-0-4-branch/NEWS
@@ -1,6 +1,11 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.4.15
+========================
+ -- Added error checking to a bunch of Bridge API calls and more 
+    gracefully handle failure modes.
+
 * Changes in SLURM 0.4.14
 ========================
  -- job state is kept on warm start of slurm
